Extract the images and the real title from the article

--- a/mediawiki-dl.cabal
+++ b/mediawiki-dl.cabal
@@ -10,7 +10,8 @@ Library
   Hs-Source-Dirs:  src
   Exposed-Modules: MediaWiki,
                    MediaWiki.Wiki,
-                   MediaWiki.Article
+                   MediaWiki.Article,
+                   MediaWiki.Image
   Other-Modules:   MediaWiki.Utils
   build-depends:   base,
                    pandoc,
