--- a/mediawiki-dl.cabal
+++ b/mediawiki-dl.cabal
@@ -15,7 +15,7 @@ Library
                    MediaWiki.Downloader
   Other-Modules:   MediaWiki.Utils
   build-depends:   base,
-                   pandoc,
+                   pandoc >= 1.10,
                    json,
                    HTTP,
                    text,
