Do not download the images if the file already exists

--- a/mediawiki-dl.cabal
+++ b/mediawiki-dl.cabal
@@ -22,6 +22,7 @@ Library
                    bytestring,
                    network,
                    filepath,
+                   directory,
                    data-default
 
 executable mediawiki-dl
